--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
   <title>AFYA CARE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="a-css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="a-css/styles.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="a-css/styles-a.css">
   <link href="https://fonts.googleapis.com/css?family=Buenard" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
   <script src="a-js/jquery-3.3.1.js"></script>
-  <script src="a-js/scripts.js"></script>
+  <script src="a-js/scripts-a.js"></script>
 
 </head>
 
@@ -41,140 +41,168 @@
     <br>
 
     <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
+    <html>
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
+        * {
+          box-sizing: border-box;
+        }
 
-/* Caption text */
-.text {
-  color: black;
-  background-color: white;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+        body {
+          font-family: Verdana, sans-serif;
+        }
 
-}
+        .mySlides {
+          display: none;
+        }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
+        img {
+          vertical-align: middle;
+        }
 
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
+        /* Slideshow container */
+        .slideshow-container {
+          max-width: 1000px;
+          position: relative;
+          margin: auto;
+        }
 
-.active {
-  background-color: #717171;
-}
+        /* Caption text */
+        .text {
+          color: black;
+          background-color: white;
+          font-size: 15px;
+          padding: 8px 12px;
+          position: absolute;
+          bottom: 8px;
+          width: 100%;
+          text-align: center;
 
-/* toggle animation */
-.toggle {
-  -webkit-animation-name: toggle;
-  -webkit-animation-duration: 5s;
-  animation-name: toggle;
-  animation-duration: 1.5s;
+        }
 
-}
+        /* Number text (1/3 etc) */
+        .numbertext {
+          color: #f2f2f2;
+          font-size: 12px;
+          padding: 8px 12px;
+          position: absolute;
+          top: 0;
+        }
 
-@-webkit-keyframes toggle {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+        /* The dots/bullets/indicators */
+        .dot {
+          height: 15px;
+          width: 15px;
+          margin: 0 2px;
+          background-color: #bbb;
+          border-radius: 50%;
+          display: inline-block;
+          transition: background-color 0.6s ease;
+        }
 
-@keyframes toggle{
-  from {opacity: .4}
-  to {opacity: 1}
-}
+        .active {
+          background-color: #717171;
+        }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-</style>
-</head>
-<body>
+        /* toggle animation */
+        .toggle {
+          -webkit-animation-name: toggle;
+          -webkit-animation-duration: 5s;
+          animation-name: toggle;
+          animation-duration: 1.5s;
+
+        }
+
+        @-webkit-keyframes toggle {
+          from {
+            opacity: .4
+          }
+
+          to {
+            opacity: 1
+          }
+        }
+
+        @keyframes toggle {
+          from {
+            opacity: .4
+          }
+
+          to {
+            opacity: 1
+          }
+        }
+
+        /* On smaller screens, decrease text size */
+        @media only screen and (max-width: 300px) {
+          .text {
+            font-size: 11px
+          }
+        }
+      </style>
+    </head>
+
+    <body>
 
 
-<div class="slideshow-container">
+      <div class="slideshow-container">
 
-<div class="mySlides toggle">
-  <div class="numbertext">1 / 3</div>
-  <img src="a-img/afyaa_wide.jpg" style="width:100%">
-  <div class="text">We value your health</div>
-</div>
+        <div class="mySlides toggle">
+          <div class="numbertext">1 / 3</div>
+          <img src="a-img/afyaa_wide.jpg" style="width:100%">
+          <div class="text">We value your health</div>
+        </div>
 
-<div class="mySlides toggle">
-  <div class="numbertext">2 / 3</div>
-  <img src="a-img/onlinesimu_wide.jpg" style="width:100%">
-  <div class="text">Take your meds on time</div>
-</div>
+        <div class="mySlides toggle">
+          <div class="numbertext">2 / 3</div>
+          <img src="a-img/onlinesimu_wide.jpg" style="width:100%">
+          <div class="text">Take your meds on time</div>
+        </div>
 
-<div class="mySlides toggle">
-  <div class="numbertext">3 / 3</div>
-  <img src="a-img/takin_wide.jpg" style="width:100%">
-  <div class="text">Stay healthy</div>
-</div>
+        <div class="mySlides toggle">
+          <div class="numbertext">3 / 3</div>
+          <img src="a-img/takin_wide.jpg" style="width:100%">
+          <div class="text">Stay healthy</div>
+        </div>
 
-</div>
-<br>
+      </div>
+      <br>
 
-<div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
-</div>
+      <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
 
-<script>
-var slideIndex = 0;
-showSlides();
+      <script>
+        var slideIndex = 0;
+        showSlides();
 
-function showSlides() {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
-</script>
+        function showSlides() {
+          var i;
+          var slides = document.getElementsByClassName("mySlides");
+          var dots = document.getElementsByClassName("dot");
+          for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+          }
+          slideIndex++;
+          if (slideIndex > slides.length) {
+            slideIndex = 1
+          }
+          for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+          }
+          slides[slideIndex - 1].style.display = "block";
+          dots[slideIndex - 1].className += " active";
+          setTimeout(showSlides, 2000); // Change image every 2 seconds
+        }
+      </script>
 
-</body>
-</html>
+    </body>
+
+    </html>
 
     <br>
 
@@ -183,9 +211,9 @@ function showSlides() {
     <p>Afya care is a website that helps anybody who is on medication to make sure that they take there medicine on time and
       guarantees you to finish your dosage .
       Afya center is a new website that will help many and ensure one has a better and healthy life.</p>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
     <h2>What we do</h2>
     <span><img class="images" src="a-img/medisafe.png" alt="screen" href="a-css/styles.css"></span>
     <br>
@@ -202,9 +230,9 @@ function showSlides() {
       a day before.
 
       Our website will show you the kind of reactions one will have when a certain medication it takes, the allergies or the side effects</p>
-      <br>
-      <br>
-      <br>
+    <br>
+    <br>
+    <br>
 
     <div class="row">
       <div class="col-md-4">
@@ -223,9 +251,12 @@ function showSlides() {
     <br>
     <br>
     <br>
-    <p>Already have an account ? If no create an account and sign up. If yes sign in.</p>
     <br>
     <br>
+
+
+
+
   </div>
 
 </body>
