--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -16,6 +16,13 @@
 
 
 <body>
+  <style>
+    body{
+      background-image: url("images/tablet.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    </style>
     <form class="modal-content" action="landing-page.html">
       <div class="container">
         <h1>Sign Up</h1>
