--- a/timetable.html
+++ b/timetable.html
@@ -14,9 +14,9 @@
   <body>
     <div class="container">
     <input   type=radio name=rm value=no checked>No reminder
-    <input  type=radio name=rm value=5000 OnClick="mytime=setTimeout('remind(2)',2000)">After 2 Secs
-    <input   type=radio name=rm value=5000 OnClick="mytime=setTimeout('remind(5)',5000)">After 5 Secs
-    <input   type=radio name=rm value=5000 OnClick="mytime=setTimeout('remind(10)',10000)">After 10 Secs
+    <input  type=radio name=rm value=5000 OnClick="mytime=setTimeout('remind(7)',1000)">At 7 AM
+    <input   type=radio name=rm value=5000 OnClick="mytime=setTimeout('remind(12)',1000)">At 12 PM
+    <input   type=radio name=rm value=5000 OnClick="mytime=setTimeout('remind(9)',1000)">At 9 PM
     </div>
 
   </body>
