--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <br>
     <div class="row">
       <div class="col-xs-6 col-md-4">
-        <img class="img-circle" id="logo" src="a-img/AFYALogo.jpg" alt="logo">
+        <a href="landing-page.html"><button class="logo-button"><img class="img-circle" id="logo" src="a-img/AFYALogo.jpg" alt="logo"></button></a>
       </div>
       <div class="col-xs-12 col-md-8">
         <h1>Afya Care</h1>
@@ -109,9 +109,9 @@
         /* toggle animation */
         .toggle {
           -webkit-animation-name: toggle;
-          -webkit-animation-duration: 5s;
+          -webkit-animation-duration: 10000s;
           animation-name: toggle;
-          animation-duration: 1.5s;
+          animation-duration: 7s;
 
         }
 
